cabal-version: 2.0
name: hsimport-config
version: 0.2.0
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
author: Daniel Trstenjak
synopsis: Exmaple configuration of hsimport
build-type: Simple

executable hsimport-config
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base,
        hsimport >=0.10.0 && <0.11.0,
        haskell-src-exts >=1.20.3 && <1.22
