cabal-version: 2.0
name:          hsimport-config
version:       0.2.0
license:       BSD3
description:
  Exmaple configuration of hsimport. Can be configured in Haskell.
category:      bsd3, example, language-tools
license-file:  LICENSE
maintainer:    power.walross@gmail.com
author:        Daniel Trstenjak
synopsis:      Example configuration of hsimport
tested-with:   GHC ==8.2.1 || ==8.4.2 || ==8.6.3 || ==8.6.5
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/fendor/hsimport-config

executable hsimport-config
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base              >=4      && <5
    , haskell-src-exts  >=1.20.3 && <1.22
    , hsimport          >=0.10.0 && <0.12.0
